--- a/styles.scss
+++ b/styles.scss
@@ -26,6 +26,7 @@ $avenir: "Avenir";
   line-height: 70px;
   font-style: normal;
   text-align: left;
+  font-weight: lighter;
 }
 
 @mixin h2 {
@@ -35,6 +36,8 @@ $avenir: "Avenir";
   line-height: 55px;
   font-style: normal;
   text-align: left;
+  font-weight: lighter;
+
 }
 
 @mixin p {
@@ -140,6 +143,10 @@ body {
             }
           }
         }
+      }
+
+      .burger-menu {
+        display: none;
       }
 
       .hero-section {
@@ -317,6 +324,8 @@ body {
                 font-size: 24px;
                 line-height: 32px;
                 margin: 0;
+                font-weight: lighter;
+
               }
               p {
                 @include p;
