--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
   }
   body .landing-page-wrapper .intro-section .intro-section-content .intro-section-text button {
     font-size: 18px;
@@ -258,6 +259,8 @@ body {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    max-width: 64px;
+    max-height: 64px;
   }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper .competence-text {
     margin: 0 5%;
@@ -278,6 +281,7 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
   }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper:hover {
     background-color: #bc9d71;
@@ -294,13 +298,14 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     color: #fff;
   }
   body .landing-page-wrapper .location-section {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 50px 0;
+    padding: 50px 0;
     max-width: 1440px;
     position: relative;
     left: 50%;
@@ -396,6 +401,7 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     color: #fff;
   }
   body .landing-page-wrapper .message-section .content button {
@@ -469,6 +475,7 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     font-size: 18px;
   }
   body .landing-page-wrapper .customer-revs .slideshow-container .mySlides p {
@@ -479,6 +486,7 @@ body {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     text-align: right;
     font-style: italic;
   }
@@ -563,6 +571,7 @@ body .landing-page-wrapper .customer-revs .slideshow-container .next:hover {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
   }
   body .landing-page-wrapper .footer .navigation .contacts {
     margin: 0 20px;
@@ -611,6 +620,8 @@ body .landing-page-wrapper .customer-revs .slideshow-container .next:hover {
     background-color: #012d4e;
     padding: 5px 0;
     padding-right: 70px;
+    display: flex;
+    justify-content: flex-end;
   }
   body .landing-page-wrapper .copyrights p {
     font-family: "Avenir";
@@ -620,8 +631,10 @@ body .landing-page-wrapper .customer-revs .slideshow-container .next:hover {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     color: #fff;
     text-align: right;
+    padding: 0 30px;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -633,7 +646,6 @@ body .landing-page-wrapper .customer-revs .slideshow-container .next:hover {
     flex-direction: row;
     justify-content: space-between;
     background: #012d4e;
-    height: 10vh;
     position: relative;
   }
   body .landing-page-wrapper header ul {
@@ -768,6 +780,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-family: "Avenir";
     text-align: left;
     line-height: 32px;
+    font-size: 16px;
   }
   body .landing-page-wrapper .hero-section .hero-text-wrapper button {
     display: none;
@@ -822,6 +835,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
   }
   body .landing-page-wrapper .intro-section .intro-section-content .intro-section-text button {
     font-size: 18px;
@@ -870,7 +884,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     transform: translate(-50%);
   }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper {
-    background-color: transparent;
+    background-color: #012d4e;
     border: 1px solid #bc9d71;
     display: flex;
     justify-content: space-evenly;
@@ -879,20 +893,19 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     padding: 0 5%;
     margin: 20px 50px;
   }
-  body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper .competence-icon {
-    margin: 5%;
-  }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper .competence-icon img {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    max-width: 64px;
+    max-height: 64px;
   }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper .competence-text {
     margin: 0 5%;
   }
   body .landing-page-wrapper .competences-section .competences-wrapper .single-competence-wrapper .competence-text h4 {
     font-family: "Palatino";
-    color: #012d4e;
+    color: #fff;
     font-size: 24px;
     line-height: 32px;
     margin: 0;
@@ -905,6 +918,8 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
+    color: #fff;
   }
   body .landing-page-wrapper .location-section {
     position: relative;
@@ -1010,6 +1025,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     color: #fff;
   }
   body .landing-page-wrapper .message-section .content button {
@@ -1069,6 +1085,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
   }
   body .landing-page-wrapper .footer .navigation .contacts {
     margin: 0 20px;
@@ -1116,7 +1133,7 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
   body .landing-page-wrapper .copyrights {
     background-color: #012d4e;
     padding: 5px 0;
-    padding-right: 70px;
+    padding-left: 20px;
   }
   body .landing-page-wrapper .copyrights p {
     font-family: "Avenir";
@@ -1126,8 +1143,9 @@ body .landing-page-wrapper .burger-menu #burger-menu-container .bar3 {
     font-weight: 400;
     line-height: 22px;
     text-align: left;
+    font-weight: lighter;
     color: #fff;
-    text-align: right;
+    text-align: left;
   }
 }
 
